syntax = "proto3";
package cometbft.services.block.v1;

option go_package = "github.com/cometbft/cometbft/api/cometbft/services/block/v1";

import "cometbft/services/block/v1/block.proto";

// BlockService provides information about blocks
service BlockService {
  // GetBlock retrieves the block information at a particular height.
  rpc GetByHeight(GetByHeightRequest) returns (GetByHeightResponse);

  // GetLatestHeight returns a stream of the latest block heights committed by
  // the network. This is a long-lived stream that is only terminated by the
  // server if an error occurs. The caller is expected to handle such
  // disconnections and automatically reconnect.
  rpc GetLatestHeight(GetLatestHeightRequest) returns (stream GetLatestHeightResponse);
}
